# online-judge

./: .gitignore  README.md  package-lock.json
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 101d0b2ef385_add_problem_attempts_table.py  7af2acada6d5_change_notes_content_to_jsonb.py  aa858b1e9552_add_saved_flashcards_table.py  cd3ec49456e4_add_notes_table.py
backend/app/: config.py  database.py  limiter.py  models.py  schemas.py
backend/app/auth/: security.py  utils.py
backend/app/routes/: ai_review_routes.py  attempts.py  auth_routes.py  dsa_search_routes.py  execute_routes.py  flash_cards.py  notes.py  problem_routes.py
backend/app/services/: ai_review.py  ai_tester.py  compiler.py  dsa_search.py  flash_card_service.py  problem_ingestion.py  security_scanner.py
frontend/: biome.json  index.html  package-lock.json  package.json
frontend/src/: App.jsx  design_guidelines.md  index.css  main.jsx
frontend/src/blocks/: CodeExecutionBlock.jsx  ExcalidrawBlock.jsx
frontend/src/components/: Auth.jsx  Diagram.jsx  ProblemDashboard.jsx
frontend/src/components/ui/: Button.jsx  Card.jsx  Input.jsx  Layout.jsx
frontend/src/context/: CodeOutputContext.jsx
frontend/src/pages/: DSAChat.jsx  FlashCards.jsx  ProblemSolve.jsx  notes.jsx
